Fix black background issue on iPhone

--- a/src/styles/_scss/hero.scss
+++ b/src/styles/_scss/hero.scss
@@ -3,7 +3,7 @@ aside.hero {
 	$gradient-color-start: desaturate(shift-color($gradient-color-end, 30%), 2%);
 
 	background-color: lighten($primary, 10%);
-	background-image: url("/images/hero_background.svg"), linear-gradient(180deg,
+	background-image: linear-gradient(180deg,
 		$gradient-color-start 10%,
 		$gradient-color-end 60%
 	);
@@ -12,7 +12,7 @@ aside.hero {
 	line-height: 2rem;
 
 	@include media-breakpoint-up(lg) {
-		background: url("/images/hero_background.svg"), linear-gradient(110deg,
+		background: linear-gradient(110deg,
 			$gradient-color-start 55%,
 			$gradient-color-end 80%
 		);
@@ -26,5 +26,9 @@ aside.hero {
 			padding-top: 0;
 			padding-bottom: 0;
 		}
+	}
+
+	div.pattern {
+		background-image: url("/images/hero_background.svg");
 	}
 }
